boreal/tests/assets/invalid_files/compilation/variable_compilation.yar
rule a {
    strings:
        $a = /.{1,999999}/
    condition:
        $a
}
